refactor: run ride detour analysis inline without persisted GPS points