@@ -1,9 +1,7 @@
 package berlin.tu.cyclinginfrastructurebackend.service;
 
 import berlin.tu.cyclinginfrastructurebackend.domain.Ride;
-import berlin.tu.cyclinginfrastructurebackend.domain.RidePoint;
 import berlin.tu.cyclinginfrastructurebackend.domain.enums.Status;
-import berlin.tu.cyclinginfrastructurebackend.repository.RideRepository;
 import berlin.tu.cyclinginfrastructurebackend.util.BearingCalculator;
 import com.graphhopper.matching.EdgeMatch;
 import com.graphhopper.matching.MatchResult;
@@ -26,7 +24,7 @@ import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.TreeMap;
 
 @Service
 public class MapMatchingService {
@@ -34,53 +32,58 @@ public class MapMatchingService {
 
     private final GraphHopperService hopperService;
     private final StreetSegmentService segmentService;
-    private final RideRepository rideRepository;
     private final double minimumOriginDestinationDistanceMeters;
     private final GeometryFactory geometryFactory = new GeometryFactory(new PrecisionModel(), 4326);
 
     public MapMatchingService(GraphHopperService hopperService,
                               StreetSegmentService segmentService,
-                              RideRepository rideRepository,
                               @Value("${analysis.minimum-origin-destination-distance-meters:500}")
                               double minimumOriginDestinationDistanceMeters) {
         this.hopperService = hopperService;
         this.segmentService = segmentService;
-        this.rideRepository = rideRepository;
         this.minimumOriginDestinationDistanceMeters = minimumOriginDestinationDistanceMeters;
     }
 
-    public RideProcessingResult processRide(Ride ride) {
+    /**
+     * Produces the one canonical trace used by validation, map matching, timestamp assignment,
+     * and detour endpoint selection.
+     */
+    public List<RideTracePoint> canonicalizeTrace(List<RideTracePoint> trace) {
+        return trace.stream()
+                .filter(point -> point.location() != null && point.timestamp() != null)
+                .filter(point -> isValidCoordinate(point.location().getY(), point.location().getX()))
+                .sorted(Comparator.comparingLong(RideTracePoint::timestamp))
+                .toList();
+    }
+
+    /** Prepares all map-matched ride state and usage deltas without persisting ride state. */
+    public RideProcessingResult processRide(Ride ride, List<RideTracePoint> canonicalTrace) {
         long totalStartedAt = System.nanoTime();
         long graphHopperNanos = 0;
         long timestampCalculationNanos = 0;
-        long segmentUpdateNanos = 0;
-        long ridePersistenceNanos = 0;
+        long segmentPreparationNanos = 0;
         try {
-            List<RidePoint> validPoints = filterAndSortPoints(ride);
-            if (validPoints.size() < 2) {
-                return result(false, totalStartedAt, graphHopperNanos, timestampCalculationNanos,
-                        segmentUpdateNanos, ridePersistenceNanos);
+            if (canonicalTrace.size() < 2) {
+                ride.setStatus(Status.SKIPPED);
+                return result(true, Map.of(), totalStartedAt, graphHopperNanos,
+                        timestampCalculationNanos, segmentPreparationNanos);
             }
 
-            double originDestinationDistanceMeters = calculateOriginDestinationDistanceMeters(validPoints);
+            double originDestinationDistanceMeters = calculateOriginDestinationDistanceMeters(canonicalTrace);
             if (originDestinationDistanceMeters < minimumOriginDestinationDistanceMeters) {
                 log.debug(
                         "Skipping ride {}: origin-destination distance {} m is below the minimum of {} m",
-                        ride.getId(), originDestinationDistanceMeters, minimumOriginDestinationDistanceMeters);
+                        ride.getOriginalFilename(), originDestinationDistanceMeters,
+                        minimumOriginDestinationDistanceMeters);
                 ride.setStatus(Status.SKIPPED);
-                long persistenceStartedAt = System.nanoTime();
-                try {
-                    rideRepository.save(ride);
-                } finally {
-                    ridePersistenceNanos = System.nanoTime() - persistenceStartedAt;
-                }
-                return result(true, totalStartedAt, graphHopperNanos, timestampCalculationNanos,
-                        segmentUpdateNanos, ridePersistenceNanos);
+                return result(true, Map.of(), totalStartedAt, graphHopperNanos,
+                        timestampCalculationNanos, segmentPreparationNanos);
             }
 
-            List<Observation> observations = validPoints.stream()
-                    .map(p -> new Observation(new GHPoint(p.getLocation().getY(), p.getLocation().getX())))
-                    .collect(Collectors.toList());
+            List<Observation> observations = canonicalTrace.stream()
+                    .map(point -> new Observation(new GHPoint(
+                            point.location().getY(), point.location().getX())))
+                    .toList();
 
             MatchResult matchResult;
             long graphHopperStartedAt = System.nanoTime();
@@ -89,61 +92,64 @@ public class MapMatchingService {
             } finally {
                 graphHopperNanos = System.nanoTime() - graphHopperStartedAt;
             }
+
             ride.setActualDistance(matchResult.getMatchLength());
             updateRideTrajectory(ride, matchResult);
 
-            // Extract edge IDs
             List<EdgeMatch> edgeMatches = matchResult.getEdgeMatches();
             List<EdgeIteratorState> edges = edgeMatches.stream()
                     .map(EdgeMatch::getEdgeState)
-                    .collect(Collectors.toList());
-
-            ride.setTraversedEdgeIds(edges.stream().map(EdgeIteratorState::getEdge).collect(Collectors.toList()));
+                    .toList();
+            ride.setTraversedEdgeIds(edges.stream().map(EdgeIteratorState::getEdge).toList());
             ride.setTraversedEdgeBearings(computeEdgeBearings(edgeMatches));
+
             long timestampStartedAt = System.nanoTime();
             try {
-                ride.setTraversedEdgeTimestamps(computeEdgeTimestamps(edgeMatches, validPoints));
+                ride.setTraversedEdgeTimestamps(computeEdgeTimestamps(edgeMatches, canonicalTrace));
             } finally {
                 timestampCalculationNanos = System.nanoTime() - timestampStartedAt;
             }
 
-            long segmentUpdateStartedAt = System.nanoTime();
+            Map<Long, Integer> usageByEdgeId = aggregateUsage(edges);
+            long segmentPreparationStartedAt = System.nanoTime();
             try {
-                segmentService.recordUsage(edges, hopperService);
+                segmentService.ensureSegmentsExist(
+                        usageByEdgeId.keySet().stream().map(Long::intValue).toList(), hopperService);
             } finally {
-                segmentUpdateNanos = System.nanoTime() - segmentUpdateStartedAt;
+                segmentPreparationNanos = System.nanoTime() - segmentPreparationStartedAt;
             }
 
-            ride.setStatus(Status.PENDING);
-            long persistenceStartedAt = System.nanoTime();
-            try {
-                rideRepository.save(ride);
-            } finally {
-                ridePersistenceNanos = System.nanoTime() - persistenceStartedAt;
-            }
-            return result(true, totalStartedAt, graphHopperNanos, timestampCalculationNanos,
-                    segmentUpdateNanos, ridePersistenceNanos);
+            return result(true, usageByEdgeId, totalStartedAt, graphHopperNanos,
+                    timestampCalculationNanos, segmentPreparationNanos);
         } catch (Exception e) {
-            log.error("Failed to process ride {}: {}", ride.getId(), e.getMessage());
-            return result(false, totalStartedAt, graphHopperNanos, timestampCalculationNanos,
-                    segmentUpdateNanos, ridePersistenceNanos);
+            log.error("Failed to map-match ride {}", ride.getOriginalFilename(), e);
+            return result(false, Map.of(), totalStartedAt, graphHopperNanos,
+                    timestampCalculationNanos, segmentPreparationNanos);
         }
     }
 
     private RideProcessingResult result(boolean success,
+                                        Map<Long, Integer> usageByEdgeId,
                                         long totalStartedAt,
                                         long graphHopperNanos,
                                         long timestampCalculationNanos,
-                                        long segmentUpdateNanos,
-                                        long ridePersistenceNanos) {
+                                        long segmentPreparationNanos) {
         return new RideProcessingResult(
                 success,
+                usageByEdgeId,
                 System.nanoTime() - totalStartedAt,
                 graphHopperNanos,
                 timestampCalculationNanos,
-                segmentUpdateNanos,
-                ridePersistenceNanos
+                segmentPreparationNanos
         );
+    }
+
+    private Map<Long, Integer> aggregateUsage(List<EdgeIteratorState> edges) {
+        Map<Long, Integer> usageByEdgeId = new TreeMap<>();
+        for (EdgeIteratorState edge : edges) {
+            usageByEdgeId.merge((long) edge.getEdge(), 1, Integer::sum);
+        }
+        return usageByEdgeId;
     }
 
     private void updateRideTrajectory(Ride ride, MatchResult result) {
@@ -151,25 +157,18 @@ public class MapMatchingService {
         List<EdgeMatch> matches = result.getEdgeMatches();
 
         for (int i = 0; i < matches.size(); i++) {
-            PointList pl = matches.get(i).getEdgeState().fetchWayGeometry(FetchMode.ALL);
-            for (int j = 0; j < pl.size(); j++) {
-                // Skip the first point of subsequent edges to avoid duplicates
-                if (i > 0 && j == 0) continue;
-                allCoords.add(new Coordinate(pl.getLon(j), pl.getLat(j)));
+            PointList points = matches.get(i).getEdgeState().fetchWayGeometry(FetchMode.ALL);
+            for (int j = 0; j < points.size(); j++) {
+                if (i > 0 && j == 0) {
+                    continue;
+                }
+                allCoords.add(new Coordinate(points.getLon(j), points.getLat(j)));
             }
         }
 
         if (allCoords.size() >= 2) {
-            ride.setTrajectory(geometryFactory.createLineString(allCoords.toArray(new Coordinate[0])));
+            ride.setTrajectory(geometryFactory.createLineString(allCoords.toArray(Coordinate[]::new)));
         }
-    }
-
-    private List<RidePoint> filterAndSortPoints(Ride ride) {
-        return ride.getRidePoints().stream()
-                .filter(p -> p.getLocation() != null && p.getTimestamp() != null)
-                .filter(p -> isValidCoordinate(p.getLocation().getY(), p.getLocation().getX()))
-                .sorted(Comparator.comparingLong(RidePoint::getTimestamp))
-                .collect(Collectors.toList());
     }
 
     private boolean isValidCoordinate(double lat, double lon) {
@@ -177,34 +176,19 @@ public class MapMatchingService {
                 && lat != 0.0 && lon != 0.0;
     }
 
-    private double calculateOriginDestinationDistanceMeters(List<RidePoint> sortedPoints) {
-        RidePoint origin = sortedPoints.getFirst();
-        RidePoint destination = sortedPoints.getLast();
+    private double calculateOriginDestinationDistanceMeters(List<RideTracePoint> sortedPoints) {
+        RideTracePoint origin = sortedPoints.getFirst();
+        RideTracePoint destination = sortedPoints.getLast();
         return DistanceCalcEarth.DIST_EARTH.calcDist(
-                origin.getLocation().getY(), origin.getLocation().getX(),
-                destination.getLocation().getY(), destination.getLocation().getX());
+                origin.location().getY(), origin.location().getX(),
+                destination.location().getY(), destination.location().getX());
     }
 
-    /**
-     * Computes compass bearings for each edge in the match result.
-     * <p>
-     * This method is called during map matching while the EdgeMatch objects are still available.
-     * The EdgeIteratorState from EdgeMatch.getEdgeState() returns geometry in the direction of
-     * traversal, so the bearing accurately reflects the rider's travel direction without needing
-     * any reversal logic.
-     *
-     * @param edgeMatches the list of edge matches from the map matching result
-     * @return a map from edge ID to bearing in degrees (0-360), preserving traversal order;
-     *         edges with invalid geometry will have null bearings
-     */
     private Map<Integer, Double> computeEdgeBearings(List<EdgeMatch> edgeMatches) {
         Map<Integer, Double> bearings = new LinkedHashMap<>();
-
         for (EdgeMatch match : edgeMatches) {
             EdgeIteratorState edgeState = match.getEdgeState();
             int edgeId = edgeState.getEdge();
-
-            // Skip if we've already computed a bearing for this edge (can happen with loops)
             if (bearings.containsKey(edgeId)) {
                 continue;
             }
@@ -214,71 +198,46 @@ public class MapMatchingService {
                 bearings.put(edgeId, null);
                 continue;
             }
-
-            // Geometry is already in traversal direction, so compute bearing from start to end
-            Double bearing = BearingCalculator.calculateBearing(geometry, 0, geometry.size() - 1);
-            bearings.put(edgeId, bearing);
+            bearings.put(edgeId, BearingCalculator.calculateBearing(
+                    geometry, 0, geometry.size() - 1));
         }
-
         return bearings;
     }
 
-    /**
-     * Computes timestamps for each edge by finding the closest RidePoint to each edge's geometry.
-     * Uses spatial distance to match GPS points to map-matched edges.
-     *
-     * @param edgeMatches the list of edge matches from map matching
-     * @param ridePoints the original GPS points with timestamps
-     * @return a map from edge ID to timestamp (milliseconds since epoch)
-     */
     private Map<Integer, Long> computeEdgeTimestamps(List<EdgeMatch> edgeMatches,
-                                                      List<RidePoint> ridePoints) {
+                                                      List<RideTracePoint> trace) {
         Map<Integer, Long> timestamps = new LinkedHashMap<>();
-        DistanceCalcEarth distCalc = new DistanceCalcEarth();
+        DistanceCalcEarth distanceCalculator = new DistanceCalcEarth();
 
         for (EdgeMatch match : edgeMatches) {
             EdgeIteratorState edgeState = match.getEdgeState();
             int edgeId = edgeState.getEdge();
-
-            // Skip if already computed
             if (timestamps.containsKey(edgeId)) {
                 continue;
             }
 
-            // Get edge geometry
             PointList geometry = edgeState.fetchWayGeometry(FetchMode.ALL);
             if (geometry == null || geometry.isEmpty()) {
                 timestamps.put(edgeId, null);
                 continue;
             }
 
-            // Use edge midpoint
-            int midIdx = geometry.size() / 2;
-            double edgeLat = geometry.getLat(midIdx);
-            double edgeLon = geometry.getLon(midIdx);
+            int midpoint = geometry.size() / 2;
+            double edgeLat = geometry.getLat(midpoint);
+            double edgeLon = geometry.getLon(midpoint);
+            RideTracePoint closestPoint = null;
+            double minimumDistance = Double.MAX_VALUE;
 
-            // Find closest RidePoint
-            RidePoint closestPoint = null;
-            double minDistance = Double.MAX_VALUE;
-
-            for (RidePoint point : ridePoints) {
-                if (point.getLocation() == null || point.getTimestamp() == null) {
-                    continue;
-                }
-
-                double pointLat = point.getLocation().getY();
-                double pointLon = point.getLocation().getX();
-                double distance = distCalc.calcDist(edgeLat, edgeLon, pointLat, pointLon);
-
-                if (distance < minDistance) {
-                    minDistance = distance;
+            for (RideTracePoint point : trace) {
+                double distance = distanceCalculator.calcDist(
+                        edgeLat, edgeLon, point.location().getY(), point.location().getX());
+                if (distance < minimumDistance) {
+                    minimumDistance = distance;
                     closestPoint = point;
                 }
             }
-
-            timestamps.put(edgeId, closestPoint != null ? closestPoint.getTimestamp() : null);
+            timestamps.put(edgeId, closestPoint != null ? closestPoint.timestamp() : null);
         }
-
         return timestamps;
     }
 }
